added underlines, trying margins and pictures

--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -32,6 +32,9 @@ body {
   height: 250px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #FFFF99; /*yellow*/
+  text-decoration-thickness: 7px;
 }
 
 
@@ -62,6 +65,9 @@ body {
   height: 100px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #99CC99;
+  text-decoration-thickness: 7px;
 }
 
 .empathize {
@@ -91,6 +97,9 @@ body {
   height: 100px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #99CCFF;
+  text-decoration-thickness: 7px;
 }
 
 
@@ -122,6 +131,9 @@ body {
   height: 380px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #E06B65;
+  text-decoration-thickness: 7px;
 }
 
 
@@ -153,6 +165,9 @@ body {
   height: 277px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #FFFF99;
+  text-decoration-thickness: 7px;
 }
 
 .prototype {
@@ -182,6 +197,9 @@ body {
   height: 100px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #99CC99;
+  text-decoration-thickness: 7px;
 }
 
 
@@ -212,6 +230,9 @@ body {
   height: 320px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #99CCFF;
+  text-decoration-thickness: 7px;
 }
 
 .solution {
@@ -228,7 +249,6 @@ body {
 }
 
 
-
 .Ttech {
   border-top-style: solid;
   border-top-width: 0.5px;
@@ -243,6 +263,9 @@ body {
   height: 300px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #99CC99;
+  text-decoration-thickness: 7px;
 }
 
 .tech {
@@ -272,6 +295,9 @@ body {
   height: 377px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #E06B65;
+  text-decoration-thickness: 7px;
 }
 
 .next {
@@ -301,6 +327,9 @@ body {
   height: 80px;
   text-decoration: underline;
   font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #FFFF99;
+  text-decoration-thickness: 7px;
 }
 
 .thanks {
@@ -341,19 +370,34 @@ body {
 }
 
 
-
 /* Clear floats after the columns */
 .article:after {
   display: table;
   clear: both;
 }
 
+.img-circle {
+    border-radius: 50%;
+}
+
+.everything {
+  width: 300px;
+  padding: 40px;
+  margin-right: auto;
+  padding-right: 10px; /* 3 */
+  padding-left:  10px; /* 3 */
+}
+
 </style>
 </head>
 <body>
+<div class="everything">
 <div class="title">
 <h1>Netic Health</h1>
 <p> Here is a teeny tiny description of the project. </p>
+</div>
+<div class="team">
+  <img class="img-circle" src="assets/img/logo.svg">
 </div>
 
 <div class="facts">
@@ -546,6 +590,8 @@ As mentioned before, time after time we were forced to adapt to the situation ei
 <p> Thanks: Thank you to Nik Yerasi and Mathias Vissers for giving us the opportunity to work on this project and for mentoring us throughout the process!</p>
 
   </div>
+
+</div>
 </div>
 
 </body>
