string theory background image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Landing Section -->
-    <section id="landing">
+    <section id="landing" style="background-image: url('assets/img/landingimg.svg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
         <div class="container d-flex align-items-center justify-content-center" id="landing-container">
             <div class="landing-text">
                 <h3>We are</h3>
