added placeholders for blob labels

--- a/index.html
+++ b/index.html
@@ -120,13 +120,74 @@
 
     <!-- Art Piece Section -->
     <section id="members">
+        
         <div class="container">
-            <div class="labels">
-                <p class="label" id="tanthai-label">Tanthai</p>
-                <p class="label iris" id="iris-label">Iris</p>
-                <p class="label" id="cool-label">Cool</p>
-            </div>
             <h2>Colors of ICB</h2>
+            <div class="labels left">
+                <div class="label-col">
+                    <p class="label">1. Name<br/>(descriptor)</p>
+                    <p class="label">2. Name<br/>(descriptor)</p>
+                    <p class="label">3. Name<br/>(descriptor)</p>
+                    <p class="label">4. Name<br/>(descriptor)</p>
+                    <p class="label">5. Name<br/>(descriptor)</p>
+                    <p class="label">6. Name<br/>(descriptor)</p>
+                    <p class="label">7. Name<br/>(descriptor)</p>
+                    <p class="label">8. Name<br/>(descriptor)</p>
+                    <p class="label">9. Name<br/>(descriptor)</p>
+                    <p class="label">10. Name<br/>(descriptor)</p>
+                </div>
+                <div class="label-col">
+                    <p class="label">11. Name<br/>(descriptor)</p>
+                    <p class="label">12. Name<br/>(descriptor)</p>
+                    <p class="label">13. Name<br/>(descriptor)</p>
+                    <p class="label">14. Name<br/>(descriptor)</p>
+                    <p class="label">15. Name<br/>(descriptor)</p>
+                    <p class="label">16. Name<br/>(descriptor)</p>
+                    <p class="label">17. Name<br/>(descriptor)</p>
+                    <p class="label">18. Name<br/>(descriptor)</p>
+                    <p class="label">19. Name<br/>(descriptor)</p>
+                </div>
+                <div class="label-col">
+                    <p class="label">20. Name<br/>(descriptor)</p>
+                    <p class="label">21. Name<br/>(descriptor)</p>
+                    <p class="label">22. Name<br/>(descriptor)</p>
+                    <p class="label">23. Name<br/>(descriptor)</p>
+                    <p class="label">24. Name<br/>(descriptor)</p>
+                    <p class="label">25. Name<br/>(descriptor)</p>
+                    <p class="label">26. Name<br/>(descriptor)</p>
+                </div>
+            </div>
+            <div class="labels right">
+                <div class="label-col">
+                    <p class="label">27. Name<br/>(descriptor)</p>
+                    <p class="label">28. Name<br/>(descriptor)</p>
+                    <p class="label">29. Name<br/>(descriptor)</p>
+                    <p class="label">30. Name<br/>(descriptor)</p>
+                    <p class="label">31. Name<br/>(descriptor)</p>
+                </div>
+                <div class="label-col">
+                    <p class="label">32. Name<br/>(descriptor)</p>
+                    <p class="label">33. Name<br/>(descriptor)</p>
+                    <p class="label">34. Name<br/>(descriptor)</p>
+                    <p class="label">35. Name<br/>(descriptor)</p>
+                    <p class="label">36. Name<br/>(descriptor)</p>
+                    <p class="label">37. Name<br/>(descriptor)</p>
+                    <p class="label">38. Name<br/>(descriptor)</p>
+                    <p class="label">39. Name<br/>(descriptor)</p>
+                </div>
+                <div class="label-col">
+                    <p class="label">40. Name<br/>(descriptor)</p>
+                    <p class="label">41. Name<br/>(descriptor)</p>
+                    <p class="label">42. Name<br/>(descriptor)</p>
+                    <p class="label">43. Name<br/>(descriptor)</p>
+                    <p class="label">44. Name<br/>(descriptor)</p>
+                    <p class="label">45. Name<br/>(descriptor)</p>
+                    <p class="label">46. Name<br/>(descriptor)</p>
+                    <p class="label">47. Name<br/>(descriptor)</p>
+                    <p class="label">48. Name<br/>(descriptor)</p>
+                    <p class="label">49. Name<br/>(descriptor)</p>
+                </div>
+            </div>
             <div id="art-container">
                 <svg width="0" height="0" viewbox="0 0 500 500">
                     <defs>
