new projects page for community cafe

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </a>
                   </div>
                   <div class="col-sm">
-                    <a href="projects/alemany-farm.html">
+                    <a href="projects/community-cafe.html">
                         <img src="assets/img/community cafe rect.svg" alt="Pizza with a Purpose" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
@@ -148,7 +148,9 @@
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
+            <div class="contact-txt">
             <h2 id="contact-text">Collaborate with us.</h2>
+            </div>
             <div class="line"></div>
             <div class="social-icons">
                 <a href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
