fixed landing highlight

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <section id="landing" style="background-image: url('assets/img/landingimg.svg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
         <div class="container d-flex align-items-center justify-content-center" id="landing-container">
             <div class="landing-text">
-                <h3>We are</h3>
-                <h1>Invention Corps</h1>
+                <h3><span class="landing-text-bkd">We are</span></h3>
+                <h1><span class="landing-text-bkd">Invention Corps</span></h1>
             </div>
         </div>
     </section>
