added groupsource article

--- a/index.html
+++ b/index.html
@@ -81,35 +81,35 @@
                 <div class="row">
                   <div class="col-sm">
                     <a href="projects/alemany-farm.html">
-                        <img src="assets/img/alemany farm rect.svg" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
+                        <img src="assets/img/alemany farm rect.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
                     </a>
                   </div>
                   <div class="col-sm">
                     <a href="projects/community-cafe.html">
-                        <img src="assets/img/community cafe rect.svg" alt="Pizza with a Purpose" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <img src="assets/img/community cafe rect.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
                   <div class="col-sm">
                     <a href="projects/alemany-farm.html">
-                        <img src="assets/img/neomotion rect.svg" alt="NeoMotion AI" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <img src="assets/img/neomotion rect.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
                 </div>
                 <div class="row">
                     <div class="col-sm">
                         <a href="projects/alemany-farm.html">
-                            <img class="card-img" src="assets/img/berkeley-food-icon.svg" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
-                            alt="Alemany Farm">
+                            <img class="card-img" src="assets/img/berkeley-food-icon.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
+                            alt="Berkeley Student Food Collective">
                         </a>
                     </div>
                     <div class="col-sm">
                         <a href="projects/alemany-farm.html">
-                            <img class="card-img" src="assets/img/makerspace-icon.svg" alt="Alemany Farm" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                            <img class="card-img" src="assets/img/makerspace-icon.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                         </a>
                     </div>
                     <div class="col-sm">
-                        <a href="projects/alemany-farm.html">
-                            <img class="card-img" src="assets/img/groupsource-icon.svg" alt="Alemany Farm" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <a href="projects/groupsource.html">
+                            <img class="card-img" src="assets/img/groupsource-icon.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                         </a>
                     </div>
                 </div>
