added groupsource icons, not perfect

--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -137,9 +137,84 @@
                         id="team-header">team</h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
-                        <p>
-                            blah blah
-                        </p>
+                        <div class="team-container">
+                            <div class="row">
+                                <div class="col">
+                                    <img src="../assets/img/groupsource/icons/isabella.svg" alt="Isabella" />
+                                </div>
+                                <div class="col">
+                                    <img src="../assets/img/groupsource/icons/abhi.svg" alt="Abhinav" />
+                                </div>
+                                <div class="col">
+                                    <img src="../assets/img/groupsource/icons/laurel.svg" alt="Laurel" />
+                                </div>
+                                <div class="col">
+                                    <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
+                                </div>
+                                <div class="col">
+                                    <img src="../assets/img/groupsource/icons/maya.svg" alt="Maya" />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col text-center">
+                                    <p>Isabella Dyc-O'Neal</p>
+                                    <p>Project Lead</p>  
+                                    <p>Senior, Cognitive Science</p>
+                                </div>
+                                <div class="col text-center">
+                                    <p>Abhinav Subramaniam</p>
+                                    <p>Business Strategy Developer</p>  
+                                    <p>Freshman, Mechanical Engineering</p>
+                                </div>
+                                <div class="col text-center">
+                                    <p>Laurel Nelson</p>
+                                    <p>Business Strategy Developer</p>  
+                                    <p>Senior, Bioengineering</p>
+                                </div>
+                                <div class="col text-center">
+                                    <p>Leo Gamboa</p>
+                                    <p>Business Strategy Developer</p>  
+                                    <p>Sophomore, MCB & Political Science</p>
+                                </div>
+                                <div class="col text-center">
+                                    <p>Maya Chen</p>
+                                    <p>User Interface Designer</p>  
+                                    <p>Junior, Cognitive Science</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="team-container">
+                            <div class="member">
+                                <img src="../assets/img/groupsource/icons/isabella.svg" alt="Isabella" />
+                                <p>Isabella Dyc-O'Neal</p>
+                                <p>Project Lead</p>  
+                                <p>Senior, Cognitive Science</p>
+                            </div>
+                            <div class="member">
+                                <img src="../assets/img/groupsource/icons/abhi.svg" alt="Abhinav" />
+                                <p>Abhinav Subramaniam</p>
+                                <p>Business Strategy Developer</p>  
+                                <p>Freshman, Mechanical Engineering</p>
+                            </div>
+                            <div class="member">
+                                <img src="../assets/img/groupsource/icons/laurel.svg" alt="Laurel" />
+                                <p>Laurel Nelson</p>
+                                <p>Business Strategy Developer</p>  
+                                <p>Senior, Bioengineering</p>
+                            </div>
+                            <div class="member">
+                                <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
+                                <p>Leo Gamboa</p>
+                                <p>Business Strategy Developer</p>  
+                                <p>Sophomore, MCB & Political Science</p>
+                            </div>
+                            <div class="member">
+                                <img src="../assets/img/groupsource/icons/maya.svg" alt="Maya" />
+                                <p>Maya Chen</p>
+                                <p>User Interface Designer</p>  
+                                <p>Junior, Cognitive Science</p>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
