--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -345,6 +345,7 @@ body {
   height: 80px;
 }
 
+
 /*the little tidbits about the project hehe */
 /* Clear floats after the columns */
 .column {
@@ -369,6 +370,25 @@ body {
   font-style: italic;
 }
 
+.team {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
+  float: left;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
+  height: 80px;
+  text-decoration: underline;
+  font-style: italic;
+  text-decoration: underline;
+  text-decoration-color: #FFFF99;
+  text-decoration-thickness: 7px;
+
+}
 
 /* Clear floats after the columns */
 .article:after {
@@ -396,9 +416,6 @@ body {
 <h1>Netic Health</h1>
 <p> Here is a teeny tiny description of the project. </p>
 </div>
-<div class="team">
-  <img class="img-circle" src="assets/img/logo.svg">
-</div>
 
 <div class="facts">
   <div class="column" style="background-color:#FFFFFF;">
@@ -418,8 +435,15 @@ body {
 </div>
 
 <div class="article">
+
+  <div class="team">
+    <img class="img-circle" src="assets/img/logo.svg">
+  </div>
+
+
+
   <div class="Tbackground" style="background-color:#FFFFFF;">
-    <h3>Background</h3>
+    <h3>background</h3>
   </div>
   <div class="background" style="background-color:#FFFFFF;">
     <p> Background : We partnered with Netic Health, a Berkeley based startup, on this project. Netic aims to provide physical therapy and rehabilitation to anyone through a smartphone. Our challenge was to wireframe an app to allow patients to track their physical therapy all while incentivizing them to complete their exercises. Additionally, we were tasked to create branding and further develop the ML basis for measuring the activity of the user. Our team comprised of six interdisciplinary members. Anika Singhania, a Computer Science major, was the project lead and worked on the wireframe. Allan Lee, a Bioengineering major, worked with the wireframe. Leilani Chu, a Molecular & Cell Biology major, designed the branding and worked on the wireframe. Philippa Steinberg, a Molecular & Cell Biology major, designed branding and worked on the wireframe. Reid Johnson, a Computer Science major, worked with the ML algorithms and coding. Carlos Lopez-Tenorio, a Data Science major, formulated the user testing and worked on the wireframe.</p>
@@ -429,7 +453,7 @@ body {
 
 <div class="article">
   <div class="Tempathize" style="background-color:#FFFFFF;">
-    <h3>Empathize</h3>
+    <h3>empathize</h3>
   </div>
   <div class="empathize" style="background-color:#FFFFFF;">
 
@@ -440,13 +464,12 @@ body {
       - Additional pain from performing exercises incorrectly
       - How might we provide resources to keep Lauren motivated and to help her track her recovery 			progress outside of her physical therapist’s clinic?</p>
 
-
   </div>
 </div>
 
 <div class="article">
   <div class="Tdefine" style="background-color:#FFFFFF;">
-    <h3>Define</h3>
+    <h3>define</h3>
   </div>
   <div class="define" style="background-color:#FFFFFF;">
 
@@ -464,7 +487,7 @@ body {
 
 <div class="article">
   <div class="Tideate" style="background-color:#FFFFFF;">
-    <h3>Ideate</h3>
+    <h3>ideate</h3>
   </div>
   <div class="ideate" style="background-color:#FFFFFF;">
 
@@ -492,7 +515,7 @@ body {
 
 <div class="article">
   <div class="Tprototype" style="background-color:#FFFFFF;">
-    <h3> Prototype</h3>
+    <h3> prototype</h3>
 
   </div>
   <div class="prototype" style="background-color:#FFFFFF;">
@@ -504,14 +527,13 @@ body {
     One of the essential features of the App is the AI technology monitoring of the patients execution of the exercises. Virtual tools are set up to measure range of motion, angles and time under pressure of your joint. We wanted to highlight the use of of AI and the element of visually tracking the limbs in our logo, so we added angels and measurements to the lettering. The goal of recovered movement is reflected by the sprinting in our brand name. </p>
 
 
-
   </div>
 </div>
 
 
 <div class="article">
   <div class="Ttest" style="background-color:#FFFFFF;">
-    <h3>Test</h3>
+    <h3>test</h3>
   </div>
   <div class="test" style="background-color:#FFFFFF;">
 
@@ -531,10 +553,9 @@ body {
 
 
 
-
 <div class="article">
   <div class="Tsolution" style="background-color:#FFFFFF;">
-    <h3>Solution</h3>
+    <h3>solution</h3>
   </div>
   <div class="solution" style="background-color:#FFFFFF;">
 
@@ -548,7 +569,7 @@ In the end, we were able to create a working Figma prototype that properly encom
 
 <div class="article">
   <div class="Ttech" style="background-color:#FFFFFF;">
-    <h3>Technical Details</h3>
+    <h3>technical details</h3>
   </div>
   <div class="tech" style="background-color:#FFFFFF;">
 
@@ -563,7 +584,7 @@ We were significantly disrupted by the mid-semester shift, losing access to our 
 
 <div class="article">
   <div class="Tnext" style="background-color:#FFFFFF;">
-    <h3>Reflect & Next Steps</h3>
+    <h3>reflect & next steps</h3>
   </div>
   <div class="next" style="background-color:#FFFFFF;">
 
@@ -581,7 +602,7 @@ As mentioned before, time after time we were forced to adapt to the situation ei
 
 <div class="article">
   <div class="Tthanks" style="background-color:#FFFFFF;">
-    <h3>Thank You </h3>
+    <h3>thank you </h3>
 
   </div>
 
